--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~12.0.3",
     "@angular/platform-browser-dynamic": "~12.0.3",
     "@angular/router": "~12.0.3",
+    "bootstrap": "^5.1.1",
     "ng-zorro-antd": "^12.0.1",
     "ngx-toastr": "^14.1.3",
     "rxjs": "~6.6.0",
